--- a/Front-end App/DeliverItAngularProject/src/styles.scss
+++ b/Front-end App/DeliverItAngularProject/src/styles.scss
@@ -1,1 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import '~normalize.css';
+
 $primary-red: #C00A0A;
+$secondary-red: #F3B5B5;
+
+h4 {
+  opacity: .65;
+  color: #000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.5px;
+  letter-spacing: 0.064px;
+}
+
+h6 {
+  color: rgba(0, 0, 0, 0.80);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.5px;
+  letter-spacing: 0.06px;
+  margin: 0;
+  width: fit-content;
+}
