--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
@@ -1,3 +1,14 @@
-<p>login works!</p>
-
-<a routerLink="/">home</a>
+<div class="container">
+  <h1>Iniciar Sesión</h1>
+  <div class="input-button">
+    <div class="input-group">
+      <h6>Dirección de correo electrónico</h6>
+      <input type="email" autofocus>
+    </div>
+    <div class="input-group">
+      <h6>Contraseña</h6>
+      <input type="password">
+    </div>
+    <app-primary-button class="button-style" title="INICIAR SESIÓN"></app-primary-button>
+  </div>
+</div>
