--- a/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.scss
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    text-align: center;
   }
 
   .registrate {
