Icono para ver clave terminado

--- a/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.html
@@ -10,8 +10,8 @@
       <div>
         <a routerLink="/login"><app-primary-button title="INICIAR SESIÓN"></app-primary-button></a>
         <div class="registrate">
-            <a routerLink=""><h6>No tienes una cuenta?</h6></a>
-            <a routerLink=""><h6 class="text-registrate">Registrate gratis</h6></a>
+            <a routerLink="/signup"><h6>No tienes una cuenta?</h6></a>
+            <a routerLink="/signup"><h6 class="text-registrate">Registrate gratis</h6></a>
         </div>
       </div>
     </div>
