--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
+
+
 <div class="container">
   <h1>Iniciar Sesión</h1>
   <div class="input-button">
@@ -7,8 +10,12 @@
     </div>
     <div class="input-group">
       <h6>Contraseña</h6>
-      <input type="password">
-    </div>
+      <div class="input-and-icon">
+        <input type="{{ passwordVisible ? 'text' : 'password' }}">
+        <span *ngIf="!passwordVisible" class="material-symbols-outlined" (click)="changeVisibilityPass(true)">visibility_off</span>
+        <span *ngIf="passwordVisible" class="material-symbols-outlined" (click)="changeVisibilityPass(false)">visibility</span>
+      </div>
+    </div>    
     <app-primary-button class="button-style" title="INICIAR SESIÓN"></app-primary-button>
   </div>
 </div>
