--- a/Front-end App/DeliverItAngularProject/src/styles.scss
+++ b/Front-end App/DeliverItAngularProject/src/styles.scss
@@ -46,7 +46,8 @@ h6 {
 }
 
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="text"] {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-family: Poppins;
@@ -56,7 +57,8 @@ input[type="password"] {
 }
 
 input[type="email"]:focus,
-input[type="password"]:focus {
+input[type="password"]:focus,
+input[type="text"]:focus {
   border-bottom: 1px solid rgba(0, 0, 0, .8);
   transition: .2s;
 }
