--- a/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.html
@@ -1,6 +1,18 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-
-
 <div class="container">
   <h1>Crear una Cuenta</h1>
+  <div class="input-button">
+    <div class="input-group">
+      <h6>Dirección de correo electrónico</h6>
+      <input type="email" autofocus>
+    </div>
+    <div class="input-group">
+      <h6>Contraseña</h6>
+      <app-input-password></app-input-password>
+    </div>
+    <div class="input-group">
+      <h6>Confirmar Contraseña</h6>
+      <app-input-password></app-input-password>
+    </div>
+    <app-primary-button class="button-style" title="CREAR CUENTA"></app-primary-button>
+  </div>
 </div>
