--- a/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.scss
@@ -9,10 +9,39 @@
 
 .input-group {
   width: 80%;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .input-subgroup {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.number-prefix {
+  display: inline;
+  margin-right: 10px;
+}
+
+.group-phone-number {
+  display: flex;
+}
+
+.phone-input {
+  width: 100%;
+}
+
+.button-style {
+  margin-top: auto;
+}
+
+.dropdown {
+  margin-top: 10px;
+}
+
+.nombre {
+  margin-top: 5px;
 }
