--- a/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.html
@@ -22,6 +22,6 @@
       <option value="repartidor">Repartidor</option>
       <option value="local">Dueño de Local</option>
     </select>
-    <app-primary-button class="button-style" title="SIGUIENTE"></app-primary-button>
+    <app-primary-button routerLink="/direccion" class="button-style" title="SIGUIENTE"></app-primary-button>
   </div>  
 </div>
