--- a/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.html
@@ -8,7 +8,7 @@
         Más de 2000 locales del país ya gestionan sus pedidos por la app.
       </h4>
       <div>
-        <a routerLink="/login"><app-primary-button title="INICIAR SESIÓN"></app-primary-button></a>
+        <a routerLink="/login"><app-primary-button class="button-style" title="INICIAR SESIÓN"></app-primary-button></a>
         <div class="registrate">
             <a routerLink="/signup"><h6>No tienes una cuenta?</h6></a>
             <a routerLink="/signup"><h6 class="text-registrate">Registrate gratis</h6></a>
