--- a/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.scss
@@ -9,7 +9,6 @@
 
 .input-group {
   width: 80%;
-  height: 70vh;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -35,7 +34,7 @@
 }
 
 .button-style {
-  margin-top: auto;
+  margin-top: 25px;
 }
 
 .dropdown {
