--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.scss
@@ -14,7 +14,6 @@
   gap: 20px;
   margin-top: 50px;
   width: 80%;
-  height: 35vh;
 }
 
 .input-group {
@@ -24,5 +23,6 @@
 }
 
 .button-style {
-  margin-top: auto;
+  margin-top: 50px;
 }
+
