--- a/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.scss
@@ -14,7 +14,6 @@
   gap: 20px;
   margin-top: 50px;
   width: 80%;
-  height: 48vh;
 }
 
 .input-group {
@@ -24,6 +23,6 @@
 }
 
 .button-style {
-  margin-top: auto;
+  margin-top: 50px;
 }
 
