Home cliente empezado

--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
@@ -9,6 +9,6 @@
       <h6>Contraseña</h6>
       <app-input-password></app-input-password>      
     </div>    
-    <app-primary-button class="button-style" title="INICIAR SESIÓN"></app-primary-button>
+    <app-primary-button routerLink="/home-customer" class="button-style" title="INICIAR SESIÓN"></app-primary-button>
   </div>
 </div>
