--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
@@ -18,3 +18,8 @@
   </div>
 </div>
 <h6 class="products-title">Productos</h6>
+<div class="content-container" id="margin-0">
+  <div class="cards-container">
+    <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
+  </div>  
+</div>
