--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.scss
@@ -64,3 +64,16 @@
   margin-left: 10%;
   margin-top: 40px;
 }
+
+.container-add-button {
+  height: 26px;
+  width: 100px;
+}
+
+.cards-container {
+  width: 80%;
+}
+
+#margin-0 {
+  margin-top: 0;
+}
