--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.scss
@@ -36,13 +36,13 @@
 
 .image {
   float: left;
-  width: 20%;
+  width: 25%;
   align-items: center;
   border-radius: 15px 0 0 15px;
 }
 
 .text-container { 
-  width: auto;
+  width: 120px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -53,7 +53,7 @@ p {
   padding: 0;
 }
 
-#dropdown {
+.dropdown {
   display: flex;
   margin-left: auto;
   margin-right: 10px;
@@ -66,4 +66,18 @@ p {
   flex-direction: row;
   align-items: center;
   height: 14px;
+}
+
+.add-product-button-container {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-subcontainer {
+  width: 90px;
+  height: 26px;
+  margin-bottom: 10px;
+  margin-right: 3px;
 }
