Pantalla de pedido y detalles de orden terminado

--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -29,8 +29,11 @@
     <app-shop-card title="Lemmy's Pizza" subtitle="Urquiza 1500" bottomText="4.5" [hasStar]=true></app-shop-card>
     <app-shop-card title="Mostaza" subtitle="Av. Pellegrinni 1700" bottomText="4.2" [hasStar]=true></app-shop-card>      
     <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
+    <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
+    <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
   </div>
 </div>
+<footer class="footer"></footer>
 
 
 
