--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
@@ -59,10 +59,12 @@ h6 {
 
 #categories-title {
   margin-top: 25px;
+  font-size: 16px;
 }
 
 #popular-shops-title {
   margin-top: 40px;
+  font-size: 16px;
 }
 
 .shop-types-container {
@@ -84,4 +86,8 @@ h6 {
 
 .margin-top {
   margin-top: 20px;
+}
+
+.footer {
+  height: 40px;
 }
