--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.scss
@@ -42,7 +42,7 @@
 }
 
 .text-container { 
-  width: 120px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -73,11 +73,11 @@ p {
   justify-content: flex-end;
   flex-direction: column;
   align-items: center;
+  margin-right: 10px;
 }
 
 .button-subcontainer {
   width: 90px;
   height: 26px;
   margin-bottom: 10px;
-  margin-right: 3px;
 }
