--- a/Front-end App/DeliverItAngularProject/src/styles.scss
+++ b/Front-end App/DeliverItAngularProject/src/styles.scss
@@ -20,6 +20,12 @@ h1 {
   margin: 0;
 }
 
+h3 {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+}
+
 h4 {
   opacity: .65;
   color: #000;
