bug con normalize resuelto

--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -26,7 +26,7 @@
 <h6 id="popular-shops-title">Los locales más populares</h6>
 <div class="parent-container-max-width">
   <div class="shop-cards-container">
-    <app-shop-card title="Lemmy's Pizza" subtitle="Urquiza 1500" bottomText="4.5" [hasStar]=true></app-shop-card>
+    <app-shop-card title="Lemmy's Pizza" subtitle="Urquiza 1500" bottomText="4.5" [hasStar]=true routerLink="/shop-customer"></app-shop-card>
     <app-shop-card title="Mostaza" subtitle="Av. Pellegrinni 1700" bottomText="4.2" [hasStar]=true></app-shop-card>      
     <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
     <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
