--- a/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.scss
@@ -42,10 +42,9 @@
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
-  height: 45vh;
+  height: auto;
   display: flex;
   flex-direction: column;
-
 }
 
 h6 {
@@ -57,10 +56,20 @@ h6 {
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
-  height: 40vh;
+  height: auto;
   display: flex;
   flex-direction: column;
 
+}
+
+.active-orders {
+  margin-bottom: 15px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  align-self: center;
+  justify-content: space-evenly
 }
 
 h2 {
@@ -93,6 +102,7 @@ h3 {
 #explore-more-deliveries {
   width: 85%;
   align-self: center;
+  display:inline-block;
 }
 
 
