--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
@@ -1,14 +1,18 @@
 <div class="container">
   <h1>Iniciar Sesión</h1>
-  <div class="input-button">
+  <form [formGroup]="loginForm" class="input-button">
     <div class="input-group">
-      <h6>Dirección de correo electrónico</h6>
-      <input type="email" autofocus>
+      <label for="email">Dirección de correo electrónico</label>
+      <input type="email" formControlName="email" autofocus>
     </div>
     <div class="input-group">
       <h6>Contraseña</h6>
-      <app-input-password></app-input-password>      
+      <app-input-password [control]=""></app-input-password>      
     </div>    
-    <app-primary-button routerLink="/home-customer" class="button-style" title="INICIAR SESIÓN"></app-primary-button>
-  </div>
+    <app-primary-button 
+    (buttonClicked)="submitForm()"
+    routerLink="/home-customer" 
+    class="button-style" 
+    title="INICIAR SESIÓN"></app-primary-button>
+  </form>
 </div>
