--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="input-group">
       <h6>Contraseña</h6>
-      <app-input-password [control]=""></app-input-password>      
+      <app-input-password></app-input-password>    
     </div>    
     <app-primary-button 
     (buttonClicked)="submitForm()"
