--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
@@ -12,7 +12,7 @@
   </div>
   <div *ngIf="hasButton === true" class="add-product-button-container">
     <div class="button-subcontainer">
-      <app-add-product-button></app-add-product-button>
+      <app-add-product-button [productId]="productId"></app-add-product-button>
     </div>
   </div>
 </div>
