--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
@@ -20,8 +20,8 @@
 <h6 class="products-title">Productos</h6>
 <div class="content-container" id="margin-0">
   <div class="cards-container">
-    <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
-    <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
+    <app-shop-card productId=1 title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
+    <app-shop-card productId=2 title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
     <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
     <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
     <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
@@ -32,13 +32,13 @@
     <app-shop-card title="Pizza New York" subtitle="8 porciones" bottomText="$ 4500" [hasButton]=true></app-shop-card>
   </div>  
 </div>
-<div class="confirm-order-container">
+<div *ngIf="totalQty > 0" class="confirm-order-container">
   <div class="total-container">
-    <p id="total-text">Total del Pedido:</p><p id="amount-text">$ 10000</p>
+    <p id="total-text">Total de Items:</p><p id="amount-text">{{ totalQty }}</p>
   </div>
   <div class="buttons-order-container">
-    <app-primary-button title="CONFIRMAR" routerLink="/order-details"></app-primary-button>
+    <app-primary-button title="SIGUIENTE" routerLink="/order-details"></app-primary-button>
     <button routerLink="/home-customer" class="cancel-button">CANCELAR</button>
   </div>
 </div>
-<footer class="footer"></footer>
+<footer [ngClass]="{'footer': totalQty > 0}" class="footer"></footer>
