--- a/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.html
@@ -13,6 +13,9 @@
       <h6>Confirmar Contraseña</h6>
       <app-input-password></app-input-password>
     </div>
-    <app-primary-button routerLink="/datos-personales" class="button-style" title="CREAR CUENTA"></app-primary-button>
+    <app-primary-button 
+    routerLink="/datos-personales" 
+    class="button-style" 
+    title="CREAR CUENTA"></app-primary-button>
   </div>
 </div>
