--- a/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.scss
@@ -1,3 +1,22 @@
+@media screen and (max-width: 576px) {
+  .input-group {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .input-button {
+    width: 65%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .input-button {
+    width: 45%;
+  }
+}
+
+
 .container {
   position: relative;
   top: 50px;
@@ -8,7 +27,6 @@
 }
 
 .input-group {
-  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 20px;
