--- a/Front-end App/DeliverItAngularProject/src/app/direccion/direccion.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/direccion/direccion.component.html
@@ -2,28 +2,30 @@
   <div class="subcontainer">
     <h1>Agregar una Dirección</h1>
     <h4>Esta es la dirección donde enviaremos tus pedidos. Luego puedes modificarla o añadir otras.</h4>
-    <div class="input-group">
+    <form [formGroup]="direccionForm" class="input-group">
       <div class="input-subgroup">
         <h6>Calle</h6>
-        <input type="text">
+        <input formControlName="street" type="text">
       </div>
       <div class="input-subgroup-altura">
         <div class="subgroup-altura">
           <h6>Altura</h6>
-          <input type="text">
+          <input formControlName="number" type="text">
         </div>
         <div class="subgroup-piso">
           <h6>Piso o Departamento</h6>
-          <input type="text" placeholder="(opcional)">
+          <input formControlName="appartment" type="text" placeholder="(opcional)">
         </div>
       </div>
       <div class="input-subgroup">
         <h6>Información adicional que nos resulte útiil para el envio</h6>
-        <input type="text" placeholder="(opcional)">
+        <input formControlName="additionalInfo" type="text" placeholder="(opcional)">
       </div>
       <div class="margin-button">
-        <app-primary-button title="CONFIRMAR"></app-primary-button>
+        <app-primary-button
+        (buttonClicked)="submitForm()"
+        title="CONFIRMAR"></app-primary-button>
       </div>
-    </div>
+    </form>
   </div>
 </div>
