--- a/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/landing-page/landing-page.component.scss
@@ -1,49 +1,75 @@
 @import '../../styles.scss';
 
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
   .logo {
     margin-top: auto;
     width: 70%;
   }
 
-  .container {
-    background-color: $secondary-red;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .text-logo {
+    width: 80%;
   }
+}
 
-  .blank-container {
-    background-color: #FFF;
-    height: 65vh;
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .logo {
     margin-top: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 35px 35px 0 0;
+    width: 50%;
   }
 
   .text-logo {
     width: 80%;
-    height: 65vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    text-align: center;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .logo {
+    margin-top: auto;
+    width: 20%;
   }
 
-  .registrate {
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .text-logo {
+    width: 45%;
   }
+}
 
-  .text-registrate {
-    margin-left: 10px;
-    color: $primary-red;
-  }
+.container {
+  background-color: $secondary-red;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.blank-container {
+  background-color: #FFF;
+  height: 65vh;
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 35px 35px 0 0;
+}
+
+.text-logo {
+  //width: 80%;
+  height: 65vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.registrate {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-registrate {
+  margin-left: 10px;
+  color: $primary-red;
 }
