--- a/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.scss
@@ -1,3 +1,22 @@
+@media screen and (max-width: 576px) {
+  .input-button {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .input-button {
+    width: 65%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .input-button {
+    width: 45%;
+  }
+}
+
+
 .container {
   position: relative;
   top: 50px;
@@ -13,7 +32,6 @@
   flex-direction: column;
   gap: 20px;
   margin-top: 50px;
-  width: 80%;
 }
 
 .input-group {
