--- a/Front-end App/DeliverItAngularProject/src/app/input-password/input-password.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/input-password/input-password.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="input-and-icon">
-  <input [formControl]="control" type="{{ passwordVisible ? 'text' : 'password' }}">
+  <input type="{{ passwordVisible ? 'text' : 'password' }}">
   <span *ngIf="!passwordVisible" class="material-symbols-outlined" (click)="changeVisibilityPass(true)">visibility_off</span>
   <span *ngIf="passwordVisible" class="material-symbols-outlined" (click)="changeVisibilityPass(false)">visibility</span>
 </div>
