--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.scss
@@ -44,3 +44,15 @@
   margin-top: 50px;
 }
 
+.input-and-icon {
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-and-icon span {
+  margin: 0;
+}
+
+.input-and-icon input {
+  width: 100%;
+}
