--- a/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/login/login.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+
 <div class="container">
   <h1>Iniciar Sesión</h1>
   <form [formGroup]="loginForm" class="input-button">
@@ -7,7 +10,13 @@
     </div>
     <div class="input-group">
       <h6>Contraseña</h6>
-      <app-input-password></app-input-password>    
+      <div class="input-and-icon">
+        <input formControlName="password" type="{{ passwordVisible ? 'text' : 'password' }}">
+        <span *ngIf="!passwordVisible" class="material-symbols-outlined"
+          (click)="changeVisibilityPass(true)">visibility_off</span>
+        <span *ngIf="passwordVisible" class="material-symbols-outlined"
+          (click)="changeVisibilityPass(false)">visibility</span>
+      </div>
     </div>    
     <app-primary-button 
     (buttonClicked)="submitForm()"
