--- a/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/signup/signup.component.html
@@ -1,21 +1,32 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+
 <div class="container">
   <h1>Crear una Cuenta</h1>
   <div class="input-button">
     <div class="input-group">
       <h6>Dirección de correo electrónico</h6>
-      <input type="email" autofocus>
+      <input formControlName="email" type="email" autofocus>
     </div>
     <div class="input-group">
       <h6>Contraseña</h6>
-      <app-input-password></app-input-password>
+      <div class="input-and-icon">
+        <input formControlName="password" type="{{ passwordVisible ? 'text' : 'password' }}">
+        <span *ngIf="!passwordVisible" class="material-symbols-outlined" (click)="changeVisibilityPass(true)">visibility_off</span>
+        <span *ngIf="passwordVisible" class="material-symbols-outlined" (click)="changeVisibilityPass(false)">visibility</span>
+      </div>
     </div>
     <div class="input-group">
       <h6>Confirmar Contraseña</h6>
-      <app-input-password></app-input-password>
+      <div class="input-and-icon">
+        <input formControlName="confirmPassword" type="{{ confirmPasswordVisible ? 'text' : 'password' }}">
+        <span *ngIf="!confirmPasswordVisible" class="material-symbols-outlined" (click)="changeVisibilityConfirmPass(true)">visibility_off</span>
+        <span *ngIf="confirmPasswordVisible" class="material-symbols-outlined" (click)="changeVisibilityConfirmPass(false)">visibility</span>
+      </div>
     </div>
-    <app-primary-button 
+    <app-primary-button
     routerLink="/datos-personales" 
     class="button-style" 
-    title="CREAR CUENTA"></app-primary-button>
+    title="f"></app-primary-button>
   </div>
 </div>
