--- a/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.html
@@ -1,12 +1,9 @@
 <div class="container">
   <div class="title-container">
-    <h1>Gracias por su compra</h1>
+    <h1>Detalle del Pedido</h1>
   </div>
   <div class="message-container">
-    <h4 class="align-left">El pedido está pendiente de que lo acepte un repartidor. Te avisaremos cuando ya esté en camino</h4>
-  </div>
-  <div class="message-container">
-    <h3 class="align-left">Detalle del pedido</h3>
+    <h3 class="align-left">Item</h3>
   </div>
   <div class="line-items-container">
     <div class="line-item">
