Minor corrections in shop slides done

--- a/Front-end App/DeliverItAngularProject/src/app/shop-add-product/shop-add-product.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-add-product/shop-add-product.component.html
@@ -17,7 +17,7 @@
         <input type="file" accept="image/*">
       </div>
     <div class="input-group">
-        <h6>Precio del envío</h6>
+        <h6>Precio</h6>
         <div class="currency">
             <span id="money-sign">$</span>
             <input id="amount" type="number" min="0">
