--- a/Front-end App/DeliverItAngularProject/src/app/deliver-order-description/deliver-order-description.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/deliver-order-description/deliver-order-description.component.html
@@ -6,8 +6,7 @@
   <p class="client">Cliente: {{ client }}</p>
   <p class="paymentType">Método de pago: {{ paymentType }}</p>
   <div class="container-status">
-    <p class="orderStatus">Estad de la orden: {{ orderStatus }}</p>
-    <button class="satus-button">Cambiar estado</button>
+    <p class="orderStatus" *ngIf="this.orderStatus !== 'Pendiente de repartidor'">Estado de la orden: {{ orderStatus }}</p>
+    <button class="status-button" *ngIf="this.orderStatus !== 'En preparación'">{{addButtonName()}}</button>
   </div>
-  <p class="destination">Destino: {{ destination }}</p>
 </div>
