--- a/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.scss
@@ -108,8 +108,6 @@ h3 {
 
 .shop-cards-container {
   width: 85%;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
 }
 
@@ -124,4 +122,8 @@ h3 {
   font-size: 40px;
   display: flex;
   justify-content: center;
+}
+
+#all-delivered-dropdown {
+color: black;
 }
